# budgetview-tauri

./: .gitignore  .ralphrc  .woodpecker.yml  AUTOCATEGORIZATION-SPEC.md  AUTOCATEGORIZATION.md  CLAUDE.md  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.ts
.claude/: BUDGETVIEW_AGENT_GUIDE.md  ralph-loop.local.md  settings.local.json
.claude/agents/: budgetview-finance-reviewer.md  budgetview-frontend-reviewer.md  budgetview-rust-reviewer.md
.claude/commands/: fix-build-budgetview.md  implement-budgetview-task.md  plan-feature.md  quality-gate-budgetview.md  review-budgetview.md  verify-budgetview.md  workflow-budgetview.md
.claude/hooks/: session-start-budgetview.sh
.github/workflows/: build.yml
.ralph/: .circuit_breaker_state  .claude_session_id  .loop_start_sha  .ralph_session  .ralph_session_history  PROMPT.md  progress.json  status.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_auto_categorization.sql  003_simplify_categorization.sql  004_splits_created_at.sql  005_splits_improvements.sql  006_recurring_detection.sql  007_encryption_settings.sql  008_reconciliation_and_groups.sql  009_notes.sql  010_account_thresholds.sql  011_default_categories.sql  012_keyword_dictionary.sql  013_ai_settings.sql  014_budget_month_shift.sql  014_transaction_types.sql
src-tauri/src/: commands.rs  db.rs  export.rs  import.rs  lib.rs
src/lib/components/: AnimatedNumber.svelte  (+18 more)
src/routes/: +layout.svelte  +page.svelte  +page.ts
(+51 files in other folders)
