[package]
name = "budgetview"
version = "0.2.0"
description = "BudgetView - Gestion de budget personnel"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }
embed-resource = "=3.0.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
chrono = "0.4"
csv = "1.3"
tauri-plugin-dialog = "2"
encoding_rs = "0.8"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"
rand = "0.8"
